# dglap90

./: CMakeLists.txt  README.md  basics.f90  dataframes.f90  dglap.f90  plots.py  plots.py.in  qcd.f90  tester.f90
pdf_grids/: cj15_Q2_1000_GeV2.csv  cj15_Q2_5_GeV2.csv
